@@ -13,6 +13,7 @@ Fixed
 ~~~~~
 
 - Bug in upload for Python3
+- Bug with getting the file size when there are redirects (issue #8)
 
 
 0.3.2 - 2017-10-15
